--- a/Delopgaveprojekt/Delopgaveprojekt/Delopgaveprojekt.csproj
+++ b/Delopgaveprojekt/Delopgaveprojekt/Delopgaveprojekt.csproj
@@ -4,5 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NPoco" Version="4.0.2" />
+  </ItemGroup>
+
 
 </Project>
