--- a/Delopgaveprojekt/Delopgaveprojekt/Delopgaveprojekt.csproj
+++ b/Delopgaveprojekt/Delopgaveprojekt/Delopgaveprojekt.csproj
@@ -5,7 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.2" />
     <PackageReference Include="NPoco" Version="4.0.2" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.1" />
   </ItemGroup>
 
 
