--- a/Delopgaveprojekt/frontend-delopgaveprojekt/angular.json
+++ b/Delopgaveprojekt/frontend-delopgaveprojekt/angular.json
@@ -25,6 +25,8 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "src/styles.css"
             ],
             "scripts": []
